Refactor: Update translations to use "Chapter" terminology
This commit updates various translation files to replace "Season" with "Chapter" across multiple languages. The changes include:
- Renaming translation keys related to seasons
- Updating text references from "seasonal" to "chapter"
- Ensuring consistent terminology across different language dictionaries

--- a/src/lib/i18n/dictionaries/de.json
+++ b/src/lib/i18n/dictionaries/de.json
@@ -123,9 +123,9 @@
   "beehive.hives.plural": "Bienenstöcke",
   "birdieplaza.birdieIntro": "Hallo, ich bin Birdie, der schönste Bumpkin, den es gibt!",
   "birdieplaza.admiringOutfit": "Mir ist aufgefallen, dass du mein Outfit bewunderst. Ist es nicht fantastisch?!?",
-  "birdieplaza.currentSeason": "Wir sind gerade in der {{currentSeason}} -Saison und Bumpkins sind verrückt nach {{chapterTicket}} s.",
+  "birdieplaza.currentChapter": "Wir sind gerade in der {{currentSeason}} -Saison und Bumpkins sind verrückt nach {{chapterTicket}} s.",
   "birdieplaza.collectTickets": "Sammle genug {{chapterTicket}} s und du kannst seltene NFTs herstellen. So habe ich dieses seltene Outfit bekommen!",
-  "birdieplaza.whatIsSeason": "Was ist eine Jahreszeit?",
+  "birdieplaza.whatIsChapter": "Was ist eine Jahreszeit?",
   "birdieplaza.howToEarnTickets": "{{chapterTicket}} s?",
   "birdieplaza.earnTicketsVariety": "Du kannst auf verschiedene Arten {{chapterTicket}} verdienen.",
   "birdieplaza.gatherAndCraft": "Sammelt genug {{chapterTicket}} s und ihr werdet seltene Gegenstände kaufen können, so wie ich es getan habe.",
@@ -496,7 +496,7 @@
   "chores.chopTrees": "Schneide 3 Bäume",
   "chores.helpWithTrees": "Meine alten Knochen sind nicht mehr das, was sie einmal waren, meinst du, du könntest mir bei diesen verdammten Bäumen helfen, die gehackt werden müssen? Unser örtlicher Schmied hilft Ihnen bei der Herstellung einiger Werkzeuge.",
   "chores.noChore": "Entschuldigung, ich habe im Moment keine Aufgaben, die erledigt werden müssen.",
-  "chores.newSeason": "Eine neue Saison rückt näher, die Hausarbeiten werden vorübergehend geschlossen.",
+  "chores.newChapter": "Eine neue Saison rückt näher, die Hausarbeiten werden vorübergehend geschlossen.",
   "chores.choresFrozen": "Neue saisonale Aufgaben werden in Kürze verfügbar sein.",
   "kingdomChores.preparing": "Nur eine Sekunde. Ich bereite ein paar Hausarbeiten vor.",
   "kingdomChores.completed": "Sieht so aus, als hätten Sie vorerst alle Ihre Aufgaben erledigt. Komm bald zurück!",
@@ -2770,8 +2770,8 @@
   "onCollectReward.Missing.Shovel": "Fehlende Schaufel",
   "onCollectReward.Missing.Shovel.description": "Erweitere deine Insel, um sie zu finden.",
   "orderhelp.Skip.hour": "Du kannst eine Bestellung erst nach 24 Stunden überspringen!",
-  "orderhelp.New.Season": "Eine neue Saison rückt näher, die Ticketlieferungen werden vorübergehend geschlossen.",
-  "orderhelp.New.Season.arrival": "Saisonale Lieferungen werden bald eröffnet...",
+  "orderhelp.New.Chapter": "Eine neue Saison rückt näher, die Ticketlieferungen werden vorübergehend geschlossen.",
+  "orderhelp.New.Chapter.arrival": "Saisonale Lieferungen werden bald eröffnet...",
   "orderhelp.Wisely": "Wähle mit Bedacht!",
   "orderhelp.SkipIn": "Einspringen",
   "orderhelp.NoRight": "Im Moment nicht",
