--- a/src/lib/i18n/dictionaries/es.json
+++ b/src/lib/i18n/dictionaries/es.json
@@ -123,9 +123,9 @@
   "beehive.hives.plural": "colmenas",
   "birdieplaza.birdieIntro": "Hola, soy Birdie, el Bumpkin más hermoso del mundo!",
   "birdieplaza.admiringOutfit": "Me di cuenta de que admirabas mi atuendo. ¿No es fantástico?!?",
-  "birdieplaza.currentSeason": "Actualmente estamos en la temporada de {{currentSeason}} y los Bumpkins se están volviendo locos por {{chapterTicket}} s.",
+  "birdieplaza.currentChapter": "Actualmente estamos en la temporada de {{currentSeason}} y los Bumpkins se están volviendo locos por {{chapterTicket}} s.",
   "birdieplaza.collectTickets": "Reúne suficientes {{chapterTicket}} s y podrás crear NFT raros. Así es como conseguí este atuendo tan raro!",
-  "birdieplaza.whatIsSeason": "¿Qué es una temporada?",
+  "birdieplaza.whatIsChapter": "¿Qué es una temporada?",
   "birdieplaza.howToEarnTickets": "{{chapterTicket}}?",
   "birdieplaza.earnTicketsVariety": "Puedes ganar {{chapterTicket}} de varias maneras.",
   "birdieplaza.gatherAndCraft": "Reúne suficientes {{chapterTicket}} y podrás comprar algunos objetos raros como hice yo.",
@@ -493,7 +493,7 @@
   "chores.chopTrees": "Corta 3 árboles",
   "chores.helpWithTrees": "Mis viejos huesos ya no son lo que solían ser, ¿crees que podrías ayudarme con estos malditos árboles que necesitan ser cortados? Nuestro herrero local te ayudará a fabricar algunas herramientas.",
   "chores.noChore": "Lo siento, no tengo ninguna tarea que hacer ahora mismo.",
-  "chores.newSeason": "Se acerca una nueva temporada, las tareas se cerrarán temporalmente.",
+  "chores.newChapter": "Se acerca una nueva temporada, las tareas se cerrarán temporalmente.",
   "chores.choresFrozen": "Pronto estarán disponibles las nuevas tareas de temporada.",
   "kingdomChores.preparing": "Un momento. Estoy preparando algunas tareas.",
   "kingdomChores.completed": "Parece que has completado todas tus tareas por ahora. Vuelve pronto!",
@@ -2736,8 +2736,8 @@
   "onCollectReward.Missing.Shovel": "Falta la pala",
   "onCollectReward.Missing.Shovel.description": "Amplía tu isla para encontrarla.",
   "orderhelp.Skip.hour": "Solo puedes saltarte un pedido después de 24 horas!",
-  "orderhelp.New.Season": "Se acerca una nueva temporada, la entrega de entradas se cerrará temporalmente.",
-  "orderhelp.New.Season.arrival": "Las entregas de temporada se abrirán pronto...",
+  "orderhelp.New.Chapter": "Se acerca una nueva temporada, la entrega de entradas se cerrará temporalmente.",
+  "orderhelp.New.Chapter.arrival": "Las entregas de temporada se abrirán pronto...",
   "orderhelp.Wisely": "Elige sabiamente!",
   "orderhelp.SkipIn": "Salta",
   "orderhelp.NoRight": "Ahora mismo no",
