--- a/src/lib/i18n/dictionaries/fr.json
+++ b/src/lib/i18n/dictionaries/fr.json
@@ -104,9 +104,9 @@
   "beehive.pollinationCelebration": "Célébration de la pollinisation ! Vos cultures sont gâtées avec un bonus de 0,2 grâce à un essaim d'abeilles amical!",
   "birdieplaza.birdieIntro": "Salut, je suis Birdie, le Bumpkin le plus beau des environs !",
   "birdieplaza.admiringOutfit": "J'ai remarqué que tu admirais ma tenue. N'est-elle pas fantastique ?!?",
-  "birdieplaza.currentSeason": "Nous sommes actuellement dans la saison {{currentSeason}} et les Bumpkins sont fous de {{chapterTicket}}.",
+  "birdieplaza.currentChapter": "Nous sommes actuellement dans la saison {{currentSeason}} et les Bumpkins sont fous de {{chapterTicket}}.",
   "birdieplaza.collectTickets": "Collecte suffisamment de {{chapterTicket}} et tu pourras fabriquer des NFT rares. C'est ainsi que j'ai obtenu cette tenue rare !",
-  "birdieplaza.whatIsSeason": "Qu'est-ce qu'une saison ?",
+  "birdieplaza.whatIsChapter": "Qu'est-ce qu'une saison ?",
   "birdieplaza.howToEarnTickets": "Comment puis-je gagner des {{chapterTicket}} ?",
   "birdieplaza.earnTicketsVariety": "Tu peux gagner des {{chapterTicket}} de plusieurs manières.",
   "birdieplaza.gatherAndCraft": "Rassemble assez de {{chapterTicket}} et tu pourras acheter des objets rares comme je l'ai fait.",
@@ -342,7 +342,7 @@
   "chores.chopTrees": "Couper 3 arbres",
   "chores.helpWithTrees": "Mes vieux os ne sont plus ce qu'ils étaient, pensez-vous que vous pourriez me donner un coup de main avec ces maudits arbres à abattre ? Notre forgeron local vous aidera à fabriquer quelques outils.",
   "chores.noChore": "Désolé, je n'ai pas de tâches à faire pour le moment.",
-  "chores.newSeason": "Une nouvelle saison approche, les tâches seront temporairement fermées.",
+  "chores.newChapter": "Une nouvelle saison approche, les tâches seront temporairement fermées.",
   "chumDetails.gold": "L'or scintillant peut être vu à 100 miles à la ronde",
   "chumDetails.iron": "Un éclat scintillant, visible sous tous les angles au crépuscule",
   "chumDetails.stone": "Peut-être qu'en jetant quelques pierres, vous attirerez des poissons",
@@ -1928,8 +1928,8 @@
   "onCollectReward.Missing.Shovel": "Pelle manquante",
   "onCollectReward.Missing.Shovel.description": "Agrandissez votre île pour la trouver.",
   "orderhelp.Skip.hour": "Vous ne pouvez sauter une commande qu'après 24 heures!",
-  "orderhelp.New.Season": "Une nouvelle saison approche, les livraisons seront temporairement fermées.",
-  "orderhelp.New.Season.arrival": "Nouvelles livraisons saisonnières bientôt disponibles.",
+  "orderhelp.New.Chapter": "Une nouvelle saison approche, les livraisons seront temporairement fermées.",
+  "orderhelp.New.Chapter.arrival": "Nouvelles livraisons saisonnières bientôt disponibles.",
   "orderhelp.Wisely": "Choisissez judicieusement!",
   "orderhelp.SkipIn": "Sauter dans",
   "orderhelp.NoRight": "Pas maintenant",
