--- a/src/lib/i18n/dictionaries/id.json
+++ b/src/lib/i18n/dictionaries/id.json
@@ -123,9 +123,9 @@
   "beehive.hives.plural": "gatal-gatal",
   "birdieplaza.birdieIntro": "Hei, aku Birdie, Bumpkin yang paling cantik di sekitar!",
   "birdieplaza.admiringOutfit": "Aku melihat kau mengagumi pakaianku. Bukankah itu fantastis?!?",
-  "birdieplaza.currentSeason": "Kami saat ini berada di Musim {{currentSeason}} dan Bumpkins tergila-gilaan dengan {{chapterTicket}} s.",
+  "birdieplaza.currentChapter": "Kami saat ini berada di Musim {{currentSeason}} dan Bumpkins tergila-gilaan dengan {{chapterTicket}} s.",
   "birdieplaza.collectTickets": "Kumpulkan cukup {{chapterTicket}} s dan Anda dapat membuat NFT langka. Begitulah cara saya mendapatkan pakaian langka ini!",
-  "birdieplaza.whatIsSeason": "Apa itu musim?",
+  "birdieplaza.whatIsChapter": "Apa itu musim?",
   "birdieplaza.howToEarnTickets": "{{chapterTicket}} s?",
   "birdieplaza.earnTicketsVariety": "Anda bisa mendapatkan {{chapterTicket}} dengan berbagai cara.",
   "birdieplaza.gatherAndCraft": "Kumpulkan cukup {{chapterTicket}} s dan Anda akan dapat membeli beberapa barang langka seperti yang saya lakukan.",
@@ -496,7 +496,7 @@
   "chores.chopTrees": "Potong 3 Pohon",
   "chores.helpWithTrees": "Tulang-tulang lamaku tidak seperti dulu, kurasa kau bisa membantu aku dengan pohon-pohon yang perlu dipotong ini? Pandai Besi lokal kami akan membantu Anda membuat beberapa alat.",
   "chores.noChore": "Maaf, aku tidak punya tugas yang perlu dilakukan sekarang.",
-  "chores.newSeason": "Musim baru mendekat, tugas akan ditutup sementara.",
+  "chores.newChapter": "Musim baru mendekat, tugas akan ditutup sementara.",
   "chores.choresFrozen": "Tugas musiman baru akan segera tersedia.",
   "kingdomChores.preparing": "Hanya sebentar. Aku sedang mempersiapkan beberapa tugas.",
   "kingdomChores.completed": "Sepertinya Anda telah menyelesaikan semua tugas Anda untuk saat ini. Kembalilah secepatnya!",
@@ -2776,8 +2776,8 @@
   "onCollectReward.Missing.Shovel": "Sekop Hilang",
   "onCollectReward.Missing.Shovel.description": "Perluas pulau Anda untuk menemukannya.",
   "orderhelp.Skip.hour": "Anda hanya dapat melewatkan pesanan setelah 24 jam!",
-  "orderhelp.New.Season": "Musim baru mendekat, pengiriman tiket akan ditutup sementara.",
-  "orderhelp.New.Season.arrival": "Pengiriman musiman segera dibuka...",
+  "orderhelp.New.Chapter": "Musim baru mendekat, pengiriman tiket akan ditutup sementara.",
+  "orderhelp.New.Chapter.arrival": "Pengiriman musiman segera dibuka...",
   "orderhelp.Wisely": "Pilih dengan bijak!",
   "orderhelp.SkipIn": "Lewati masuk",
   "orderhelp.NoRight": "Tidak sekarang",
