--- a/src/lib/i18n/dictionaries/it.json
+++ b/src/lib/i18n/dictionaries/it.json
@@ -122,9 +122,9 @@
   "beehive.hives.plural": "orticaria",
   "birdieplaza.birdieIntro": "Ehi, sono Birdie, la Bumpkin più bella in circolazione!",
   "birdieplaza.admiringOutfit": "Ho notato che ammiravi il mio abbigliamento. Non è fantastico?!?",
-  "birdieplaza.currentSeason": "Attualmente siamo nella stagione {{currentSeason}} e i Bumpkins impazziscono per {{chapterTicket}} s.",
+  "birdieplaza.currentChapter": "Attualmente siamo nella stagione {{currentSeason}} e i Bumpkins impazziscono per {{chapterTicket}} s.",
   "birdieplaza.collectTickets": "Raccogli abbastanza {{chapterTicket}} e puoi creare NFT rari. È così che mi sono procurato questo abito raro!",
-  "birdieplaza.whatIsSeason": "Cos'è una stagione?",
+  "birdieplaza.whatIsChapter": "Cos'è una stagione?",
   "birdieplaza.howToEarnTickets": "{{chapterTicket}} s?",
   "birdieplaza.earnTicketsVariety": "Puoi guadagnare {{chapterTicket}} in diversi modi.",
   "birdieplaza.gatherAndCraft": "Raccogli abbastanza {{chapterTicket}} e potrai acquistare alcuni oggetti rari come ho fatto io.",
@@ -492,7 +492,7 @@
   "chores.chopTrees": "Taglia 3 alberi",
   "chores.helpWithTrees": "Le mie vecchie ossa non sono più quelle di una volta, pensi di potermi dare una mano con questi maledetti alberi da tagliare? Il nostro fabbro locale ti aiuterà a creare alcuni strumenti.",
   "chores.noChore": "Scusate, non ho nessuna faccenda da fare adesso.",
-  "chores.newSeason": "Si avvicina una nuova stagione, le faccende si chiuderanno temporaneamente.",
+  "chores.newChapter": "Si avvicina una nuova stagione, le faccende si chiuderanno temporaneamente.",
   "chores.choresFrozen": "Presto saranno disponibili nuove faccende stagionali.",
   "kingdomChores.preparing": "Solo un secondo. Sto preparando alcune faccende.",
   "kingdomChores.completed": "Sembra che tu abbia completato tutte le faccende per ora. Torna presto!",
@@ -2734,8 +2734,8 @@
   "onCollectReward.Missing.Shovel": "Pala mancante",
   "onCollectReward.Missing.Shovel.description": "Espandi la tua isola per trovarla.",
   "orderhelp.Skip.hour": "Puoi saltare un ordine solo dopo 24 ore!",
-  "orderhelp.New.Season": "Si avvicina una nuova stagione, le consegne dei biglietti chiuderanno temporaneamente.",
-  "orderhelp.New.Season.arrival": "Le consegne stagionali apriranno presto...",
+  "orderhelp.New.Chapter": "Si avvicina una nuova stagione, le consegne dei biglietti chiuderanno temporaneamente.",
+  "orderhelp.New.Chapter.arrival": "Le consegne stagionali apriranno presto...",
   "orderhelp.Wisely": "Scegli con saggezza!",
   "orderhelp.SkipIn": "Salta",
   "orderhelp.NoRight": "Non adesso",
