--- a/src/lib/i18n/dictionaries/ja.json
+++ b/src/lib/i18n/dictionaries/ja.json
@@ -123,9 +123,9 @@
   "beehive.hives.plural": "じんましん",
   "birdieplaza.birdieIntro": "こんにちは、私はバーディー、周りで一番美しいバンプキンです！",
   "birdieplaza.admiringOutfit": "あなたが私の服を賞賛しているのに気づきました。素晴らしくない？！？",
-  "birdieplaza.currentSeason": "現在 {{currentSeason}} シーズンに入っており、バンプキンズは {{chapterTicket}} に夢中になっています。",
+  "birdieplaza.currentChapter": "現在 {{currentSeason}} シーズンに入っており、バンプキンズは {{chapterTicket}} に夢中になっています。",
   "birdieplaza.collectTickets": "十分な {{chapterTicket}} を集めると、レアなNFTを作成できます。そんなわけで、このレアな衣装を手に入れました！",
-  "birdieplaza.whatIsSeason": "シーズンとは？",
+  "birdieplaza.whatIsChapter": "シーズンとは？",
   "birdieplaza.howToEarnTickets": "{{chapterTicket}} s?",
   "birdieplaza.earnTicketsVariety": "さまざまな方法で {{chapterTicket}} を獲得できます。",
   "birdieplaza.gatherAndCraft": "{{chapterTicket}} をたくさん集めれば、私のようにレアなアイテムを購入できるようになります。",
@@ -496,7 +496,7 @@
   "chores.chopTrees": "木を3本切る",
   "chores.helpWithTrees": "俺の古い骨は昔とは違う。切り刻む必要のあるこの木に手を貸してくれないか？地元の鍛冶屋が道具の製作を手伝ってくれます。",
   "chores.noChore": "ごめん、今やるべき仕事がないんだ。",
-  "chores.newSeason": "新しいシーズンが近づくと、雑用は一時的に終了します。",
+  "chores.newChapter": "新しいシーズンが近づくと、雑用は一時的に終了します。",
   "chores.choresFrozen": "新しい季節の雑用が間もなく利用可能になります。",
   "kingdomChores.preparing": "ちょっと待って家事の準備をしているところです。",
   "kingdomChores.completed": "今のところ家事は全部終わったようですね。すぐに戻ってきて！",
@@ -2776,8 +2776,8 @@
   "onCollectReward.Missing.Shovel": "ショベルが見つからない",
   "onCollectReward.Missing.Shovel.description": "島を広げて見つけましょう。",
   "orderhelp.Skip.hour": "注文をスキップできるのは24時間後です！",
-  "orderhelp.New.Season": "新しいシーズンが近づくと、チケットの配達は一時的に終了します。",
-  "orderhelp.New.Season.arrival": "季節限定配送が間もなく始まります...",
+  "orderhelp.New.Chapter": "新しいシーズンが近づくと、チケットの配達は一時的に終了します。",
+  "orderhelp.New.Chapter.arrival": "季節限定配送が間もなく始まります...",
   "orderhelp.Wisely": "賢く選んでください！",
   "orderhelp.SkipIn": "スキップイン",
   "orderhelp.NoRight": "今はだめだ",
