--- a/src/lib/i18n/dictionaries/ko.json
+++ b/src/lib/i18n/dictionaries/ko.json
@@ -123,9 +123,9 @@
   "beehive.hives.plural": "염증",
   "birdieplaza.birdieIntro": "안녕하세요, 저는 세상에서 가장 아름다운 범프킨인 버디예요!",
   "birdieplaza.admiringOutfit": "내 옷차림에 감탄하는 걸 봤어.환상적이지 않나요?!?",
-  "birdieplaza.currentSeason": "우리는 현재 {{currentSeason}} 시즌이고 범프킨은 {{chapterTicket}} s에 열광하고 있습니다.",
+  "birdieplaza.currentChapter": "우리는 현재 {{currentSeason}} 시즌이고 범프킨은 {{chapterTicket}} s에 열광하고 있습니다.",
   "birdieplaza.collectTickets": "{{chapterTicket}} 를 충분히 모으면 희귀 NFT를 만들 수 있습니다.그렇게 해서 이 희귀한 의상을 얻게 됐어요!",
-  "birdieplaza.whatIsSeason": "시즌이란 무엇인가요?",
+  "birdieplaza.whatIsChapter": "시즌이란 무엇인가요?",
   "birdieplaza.howToEarnTickets": "{{chapterTicket}}?",
   "birdieplaza.earnTicketsVariety": "다양한 방법으로 {{chapterTicket}} 를 벌 수 있습니다.",
   "birdieplaza.gatherAndCraft": "{{chapterTicket}} 를 충분히 모으면 저처럼 희귀 아이템을 살 수 있을 거예요.",
@@ -496,7 +496,7 @@
   "chores.chopTrees": "나무 3그루를 자르세요",
   "chores.helpWithTrees": "내 오래된 뼈는 예전 같지 않아. 베야 할 이 망할 나무들을 좀 빌려줄 수 있겠나?현지 대장장이가 도구 제작을 도와줄 거예요.",
   "chores.noChore": "미안해요, 지금 해야 할 집안일은 없어요.",
-  "chores.newSeason": "새 시즌이 다가오면 집안일이 일시적으로 종료됩니다.",
+  "chores.newChapter": "새 시즌이 다가오면 집안일이 일시적으로 종료됩니다.",
   "chores.choresFrozen": "새로운 계절 집안일이 곧 제공될 예정입니다.",
   "kingdomChores.preparing": "잠시만 기다려 주세요.집안일을 준비하고 있어요.",
   "kingdomChores.completed": "지금은 집안일을 모두 마친 것 같습니다.빨리 돌아와!",
@@ -2773,8 +2773,8 @@
   "onCollectReward.Missing.Shovel": "사라진 삽",
   "onCollectReward.Missing.Shovel.description": "섬을 확장하여 찾아보세요.",
   "orderhelp.Skip.hour": "24시간 이후에만 주문을 건너뛸 수 있습니다!",
-  "orderhelp.New.Season": "새 시즌이 다가옴에 따라 티켓 배송이 일시적으로 마감됩니다.",
-  "orderhelp.New.Season.arrival": "계절 배송이 곧 시작됩니다...",
+  "orderhelp.New.Chapter": "새 시즌이 다가옴에 따라 티켓 배송이 일시적으로 마감됩니다.",
+  "orderhelp.New.Chapter.arrival": "계절 배송이 곧 시작됩니다...",
   "orderhelp.Wisely": "현명하게 선택하세요!",
   "orderhelp.SkipIn": "스킵 인",
   "orderhelp.NoRight": "지금은 아니야",
