--- a/src/lib/i18n/dictionaries/ms.json
+++ b/src/lib/i18n/dictionaries/ms.json
@@ -123,9 +123,9 @@
   "beehive.hives.plural": "sarang",
   "birdieplaza.birdieIntro": "Hei sana, saya Birdie, Bumpkin yang paling indah di sekitar!",
   "birdieplaza.admiringOutfit": "Saya perhatikan anda mengagumi pakaian saya. Bukankah ia hebat?!?",
-  "birdieplaza.currentSeason": "Kami kini berada dalam Musim {{currentSeason}} dan Bumpkins menjadi gila untuk {{chapterTicket}} s.",
+  "birdieplaza.currentChapter": "Kami kini berada dalam Musim {{currentSeason}} dan Bumpkins menjadi gila untuk {{chapterTicket}} s.",
   "birdieplaza.collectTickets": "Kumpulkan cukup {{chapterTicket}} s dan anda boleh membuat NFT yang jarang berlaku. Itulah bagaimana saya mendapat pakaian langka ini!",
-  "birdieplaza.whatIsSeason": "Apa itu musim?",
+  "birdieplaza.whatIsChapter": "Apa itu musim?",
   "birdieplaza.howToEarnTickets": "{{chapterTicket}} s?",
   "birdieplaza.earnTicketsVariety": "Anda boleh memperoleh {{chapterTicket}} dalam pelbagai cara.",
   "birdieplaza.gatherAndCraft": "Kumpulkan cukup {{chapterTicket}} s dan anda akan dapat membeli beberapa barang langka seperti yang saya lakukan.",
@@ -496,7 +496,7 @@
   "chores.chopTrees": "Potong 3 Pokok",
   "chores.helpWithTrees": "Tulang lama saya bukanlah seperti dulu, rasa awak boleh memberi saya tangan dengan pokok-pokok ini yang memerlukan pencincang? Tukang Besi tempatan kami akan membantu anda membuat beberapa alat.",
   "chores.noChore": "Maaf, saya tidak mempunyai tugas yang perlu dilakukan sekarang.",
-  "chores.newSeason": "Musim baru menghampiri, kerja rumah akan ditutup buat sementara waktu.",
+  "chores.newChapter": "Musim baru menghampiri, kerja rumah akan ditutup buat sementara waktu.",
   "chores.choresFrozen": "Kerja bermusim baru akan tersedia tidak lama lagi.",
   "kingdomChores.preparing": "Hanya sesaat. Saya sedang menyiapkan beberapa tugas.",
   "kingdomChores.completed": "Nampaknya anda telah menyelesaikan semua tugas anda buat masa ini. Kembali tidak lama lagi!",
@@ -2776,8 +2776,8 @@
   "onCollectReward.Missing.Shovel": "Penyodok yang hilang",
   "onCollectReward.Missing.Shovel.description": "Kembangkan pulau anda untuk mencarinya.",
   "orderhelp.Skip.hour": "Anda hanya dapat melangkau pesanan selepas 24 jam!",
-  "orderhelp.New.Season": "Musim baru menghampiri, penghantaran tiket akan ditutup buat sementara waktu.",
-  "orderhelp.New.Season.arrival": "Penghantaran bermusim dibuka tidak lama lagi...",
+  "orderhelp.New.Chapter": "Musim baru menghampiri, penghantaran tiket akan ditutup buat sementara waktu.",
+  "orderhelp.New.Chapter.arrival": "Penghantaran bermusim dibuka tidak lama lagi...",
   "orderhelp.Wisely": "Pilih dengan bijak!",
   "orderhelp.SkipIn": "Langkau masuk",
   "orderhelp.NoRight": "Tidak Sekarang",
