--- a/src/lib/i18n/dictionaries/pt-BR.json
+++ b/src/lib/i18n/dictionaries/pt-BR.json
@@ -92,7 +92,7 @@
   "beehive.pollinationCelebration": "Celebração da polinização! Suas colheitas terão um boost de 0,2 graças a um enxame de abelhas amigáveis!",
   "birdieplaza.birdieIntro": "Olá, eu sou Birdie, a Bumpkin mais bonita por aqui!",
   "birdieplaza.admiringOutfit": "Notei você admirando meu traje. Não é fantástico?!?",
-  "birdieplaza.whatIsSeason": "O que é uma Temporada?",
+  "birdieplaza.whatIsChapter": "O que é uma Temporada?",
   "birdieplaza.newChapterIntro": "A cada 3 meses, uma nova temporada é introduzida em Sunflower Land.",
   "description.speed.chicken.one": "Seus frangos agora produzirão ovos 10% mais rápido.",
   "description.banana.chicken": "Um frango que impulsiona bananas. Em que mundo vivemos?!",
@@ -322,7 +322,7 @@
   "chores.reachLevelIntro": "Se você quer subir de nível e desbloquear novas habilidades, é melhor começar a cozinhar e comer.",
   "chores.chopTrees": "Corte 3 Árvores",
   "chores.helpWithTrees": "Meus velhos ossos não são mais como costumavam ser, acho que você poderia me dar uma mão com essas malditas árvores que precisam ser cortadas? Nosso Ferreiro local irá ajudá-lo a fabricar algumas ferramentas.",
-  "chores.newSeason": "Uma nova temporada se aproxima, as tarefas serão temporariamente encerradas.",
+  "chores.newChapter": "Uma nova temporada se aproxima, as tarefas serão temporariamente encerradas.",
   "chores.noChore": "Desculpe, não tenho tarefas para fazer agora.",
   "chumDetails.gold": "O ouro cintilante pode ser visto a 100 milhas de distância",
   "chumDetails.iron": "Um brilho cintilante, pode ser visto de todos os ângulos durante o crepúsculo",
@@ -1883,8 +1883,8 @@
   "onboarding.buyFarm.two": "Esta NFT armazenará com segurança todo o seu progresso em Sunflower Land e permitirá que você volte sempre para cuidar de sua fazenda.",
   "onboarding.wallet.already": "Eu já tenho uma carteira ",
   "orderhelp.Skip.hour": "Você só pode pular um pedido após 24 horas!",
-  "orderhelp.New.Season": "Uma nova temporada se aproxima, as entregas serão temporariamente interrompidas.",
-  "orderhelp.New.Season.arrival": "Novas entregas sazonais em breve.",
+  "orderhelp.New.Chapter": "Uma nova temporada se aproxima, as entregas serão temporariamente interrompidas.",
+  "orderhelp.New.Chapter.arrival": "Novas entregas sazonais em breve.",
   "orderhelp.Wisely": "Escolha sabiamente!",
   "orderhelp.SkipIn": "Pular em",
   "orderhelp.NoRight": "Não Agora",
@@ -2302,7 +2302,7 @@
   "beehive.estimatedFull": "Total estimado",
   "beehive.hive.singular": "colmeia",
   "beehive.hives.plural": "colmeias",
-  "birdieplaza.currentSeason": "Atualmente, estamos na temporada {{currentSeason}} e os Bumpkins estão ficando loucos por {{chapterTicket}} s.",
+  "birdieplaza.currentChapter": "Atualmente, estamos na temporada {{currentSeason}} e os Bumpkins estão ficando loucos por {{chapterTicket}} s.",
   "birdieplaza.collectTickets": "Colete {{chapterTicket}} s suficientes e você poderá criar NFTs raros. Foi assim que consegui essa roupa rara!",
   "birdieplaza.howToEarnTickets": "{{chapterTicket}} s?",
   "birdieplaza.earnTicketsVariety": "Você pode ganhar {{chapterTicket}} de várias maneiras.",
