--- a/src/lib/i18n/dictionaries/ru.json
+++ b/src/lib/i18n/dictionaries/ru.json
@@ -124,13 +124,13 @@
   "birdieplaza.collectTickets": "Собери достаточно {{chapterTicket}} и ты сможешь купить редкие NFTs. Так у меня и появился этот редкий наряд!",
   "birdieplaza.commonMethod": "Самый распространенный способ заработать {{chapterTicket}} s — собирать ресурсы или другие запрашиваемые предметы, а затем доставлять на площадь и в другие районы.",
   "birdieplaza.craftItems": "Чтобы приобрести эти редкие предметы, вы должны собрать {{chapterTicket}} и обменять их в Stella's Megastore или участвовать в аукционах.",
-  "birdieplaza.currentSeason": "На данный момент мы в {{currentSeason}} сезоне, и бампкины сходят с ума по {{chapterTicket}}.",
+  "birdieplaza.currentChapter": "На данный момент мы в {{currentSeason}} сезоне, и бампкины сходят с ума по {{chapterTicket}}.",
   "birdieplaza.earnTicketsVariety": "Ты можешь заработать {{chapterTicket}} различными способами.",
   "birdieplaza.gatherAndCraft": "Собери достаточно {{chapterTicket}} и ты сможешь купить некоторые редкие предметы, как я.",
   "birdieplaza.howToEarnTickets": "{{chapterTicket}}’ы?",
   "birdieplaza.newChapterIntro": "Каждые 3 месяца в Sunflower Land начинается новый сезон.",
   "birdieplaza.chapterQuests": "В этом сезоне вас ждут увлекательные задания, редкие коллекционные предметы и эксклюзивные носимые вещи, которые вы можете заработать.",
-  "birdieplaza.whatIsSeason": "Что такое сезон?",
+  "birdieplaza.whatIsChapter": "Что такое сезон?",
   "blacksmith-intro.headline": "Поторапливайся.",
   "blacksmith-intro.one": "Я мастер по крафту инструментов, и с правильными ресурсами я могу сделать все, что ты пожелаешь... включая еще больше инструментов!",
   "blueChip.description": "Собери Чернику 5000 раз",
@@ -676,7 +676,7 @@
   "chores.kingdom": "Задания фракции",
   "chores.kingdom.intro": "Выполняй задания на ферме и зарабатывай марки в доме фракции",
   "chores.lockedChore": "Уровень {{level}}",
-  "chores.newSeason": "Приближается новый сезон, список дел временно закрыт.",
+  "chores.newChapter": "Приближается новый сезон, список дел временно закрыт.",
   "chores.noChore": "К сожалению, у меня сейчас нет дел, которые надо сделать.",
   "chores.reachLevel": "Прокачайся до 2 уровня",
   "chores.reachLevelIntro": "Если ты хочешь повысить уровень и открыть новые возможности, то тебе следует приготовить еду и заточить ее.",
@@ -3911,8 +3911,8 @@
   "opensea": "OpenSea",
   "optional": "Дополнительно",
   "orangeSqueeze.description": "Собери Апельсины 100 раз",
-  "orderhelp.New.Season": "Приближается новый сезон, доставка билетов временно прекращается.",
-  "orderhelp.New.Season.arrival": "Скоро открытие сезонных поставок...",
+  "orderhelp.New.Chapter": "Приближается новый сезон, доставка билетов временно прекращается.",
+  "orderhelp.New.Chapter.arrival": "Скоро открытие сезонных поставок...",
   "orderhelp.NoRight": "Не сейчас",
   "orderhelp.Skip.hour": "Пропустить заказ можно только раз в сутки!",
   "orderhelp.SkipIn": "Пропустить через",
