--- a/src/lib/i18n/dictionaries/tr.json
+++ b/src/lib/i18n/dictionaries/tr.json
@@ -105,7 +105,7 @@
   "beehive.pollinationCelebration": "Tozlaşma kutlaması! Mahsulleriniz, dost canlısı bir arı sürüsü sayesinde 0,2'lik bir destekle ödüllendirilecek!",
   "birdieplaza.birdieIntro": "Merhaba ben Birdie, çevredeki en güzel Bumpkin’im!",
   "birdieplaza.admiringOutfit": "Kıyafetime hayran olduğunu fark ettim. Harika değil mi?!?",
-  "birdieplaza.whatIsSeason": "Sezon nedir?",
+  "birdieplaza.whatIsChapter": "Sezon nedir?",
   "birdieplaza.newChapterIntro": "Sunflower Land’de her 3 ayda bir yeni sezon tanıtılıyor.",
   "description.speed.chicken.one": "Artık tavukların 10% daha hızlı yumurta üretecek.",
   "description.banana.chicken": "Muzları artıran bir tavuk. Nasıl bir dünyada yaşıyoruz.",
@@ -346,7 +346,7 @@
   "chores.chopTrees": "3 Ağaç Kesin",
   "chores.helpWithTrees": "Eski kemiklerim eskisi gibi değil, kesilmesi gereken bu lanet ağaçlar konusunda bana yardım edebilir misin? Yerel Demircimiz bazı aletler yapmanıza yardımcı olacaktır.",
   "chores.noChore": "Üzgünüm, şu anda yapman gereken herhangi bir iş yok.",
-  "chores.newSeason": "Yeni bir sezon yaklaşıyor, işler geçici olarak kapanacak.",
+  "chores.newChapter": "Yeni bir sezon yaklaşıyor, işler geçici olarak kapanacak.",
   "chumDetails.gold": "Parıldayan altın 100 mil öteden görülebilir",
   "chumDetails.iron": "Alacakaranlık sırasında her açıdan görülebilen parıldayan bir ışıltı",
   "chumDetails.stone": "Belki birkaç taş atmak balıkları çeker",
@@ -1927,8 +1927,8 @@
   "onCollectReward.Missing.Shovel": "Eksik Kürek",
   "onCollectReward.Missing.Shovel.description": "Onu bulmak için adanızı genişletin.",
   "orderhelp.Skip.hour": "Bir siparişi yalnızca 24 saat sonra atlayabilirsiniz!",
-  "orderhelp.New.Season": "Yeni sezon yaklaşıyor, teslimatlar geçici olarak kapanacak.",
-  "orderhelp.New.Season.arrival": "Yeni sezonluk teslimatlar yakında açılıyor.",
+  "orderhelp.New.Chapter": "Yeni sezon yaklaşıyor, teslimatlar geçici olarak kapanacak.",
+  "orderhelp.New.Chapter.arrival": "Yeni sezonluk teslimatlar yakında açılıyor.",
   "orderhelp.Wisely": "Akıllıca seç!",
   "orderhelp.SkipIn": "Atla",
   "orderhelp.NoRight": "Şimdi olmaz",
@@ -2350,7 +2350,7 @@
   "beehive.estimatedFull": "Tahmini dolu",
   "beehive.hive.singular": "kovan",
   "beehive.hives.plural": "kovanlar",
-  "birdieplaza.currentSeason": "Şu anda {{currentSeason}} Sezonundayız ve Bumpkins {{chapterTicket}} s için çıldırıyor.",
+  "birdieplaza.currentChapter": "Şu anda {{currentSeason}} Sezonundayız ve Bumpkins {{chapterTicket}} s için çıldırıyor.",
   "birdieplaza.collectTickets": "Yeterince {{chapterTicket}} s toplayın ve nadir NFT'ler oluşturabilirsiniz. Bu nadir kıyafeti böyle aldım!",
   "birdieplaza.howToEarnTickets": "{{chapterTicket}} s?",
   "birdieplaza.earnTicketsVariety": "{{chapterTicket}} çeşitli şekillerde kazanabilirsiniz.",
