--- a/src/lib/i18n/dictionaries/zh-CN.json
+++ b/src/lib/i18n/dictionaries/zh-CN.json
@@ -121,9 +121,9 @@
   "beehive.hives.plural": "蜂箱",
   "birdieplaza.birdieIntro": "嘿，我是 Birdie，这儿最美的乡包佬！",
   "birdieplaza.admiringOutfit": "我看你是在欣赏我的衣服。漂亮坏了，是吧？！？",
-  "birdieplaza.currentSeason": "我们目前正处于 {{currentSeason}} 季节，乡包佬们对 {{chapterTicket}} 疯狂不已。",
+  "birdieplaza.currentChapter": "我们目前正处于 {{currentSeason}} 季节，乡包佬们对 {{chapterTicket}} 疯狂不已。",
   "birdieplaza.collectTickets": "收集足够的 {{chapterTicket}} 即可锻造稀有 NFT。这就是我获得这套稀有服装的方法！",
-  "birdieplaza.whatIsSeason": "什么是时季？",
+  "birdieplaza.whatIsChapter": "什么是时季？",
   "birdieplaza.howToEarnTickets": "我怎样赚取",
   "birdieplaza.earnTicketsVariety": "您可以通过多种方式赚取 {{chapterTicket}}。",
   "birdieplaza.gatherAndCraft": "收集足够的 {{chapterTicket}} 你就可以像我一样购买一些稀有物品。",
@@ -469,7 +469,7 @@
   "chores.chopTrees": "砍伐 3 颗树",
   "chores.helpWithTrees": "我这身老骨头已强健不再了，想来你可以搭把手把这些该砍的死鬼树砍了？我们这块的 Blacksmith 会帮你锻造好些工具的。",
   "chores.noChore": "抱歉，我暂时没有什么日常农活需要您做的。",
-  "chores.newSeason": "新时季就要来临，日常农活暂时停单。",
+  "chores.newChapter": "新时季就要来临，日常农活暂时停单。",
   "chores.choresFrozen": "新时季日常农活即将发单。先前时季的日常农活与进度会被重置。",
   "kingdomChores.preparing": "稍等一下。我还在准备发布农活。",
   "kingdomChores.completed": "看来你现在已经完成了所有农活了！晚点再来吧！",
@@ -2936,8 +2936,8 @@
   "onCollectReward.Market": "去市场购买种子。",
   "onCollectReward.Missing.Shovel": "未找到铲子",
   "onCollectReward.Missing.Shovel.description": "拓张您的岛屿来找到它。",
-  "orderhelp.New.Season": "新时季即将来临，票券送货将暂时关闭。",
-  "orderhelp.New.Season.arrival": "时季送货即将开放……",
+  "orderhelp.New.Chapter": "新时季即将来临，票券送货将暂时关闭。",
+  "orderhelp.New.Chapter.arrival": "时季送货即将开放……",
   "orderhelp.Wisely": "谨慎选择！",
   "orderhelp.ticket.deliveries.closed": "票券送货目前已关闭",
   "pending.calcul": "正在计算结果。",
