[FEAT] Wearable and Collectible Buff UI

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -4666,6 +4666,13 @@
   "description.jellyfish.boost": "Increase fish catch by 1 in summer",
   "description.jellyfish": "A luminous marine marvel that glows with mystical energy, granting enhanced fishing abilities during the warm summer months.",
   "description.chamomile": "A decorative mutant flower found during the Winds of Change chapter.",
+  "description.goldenSheep.boost": "Feed Sheeps for free!",
+  "description.barnBlueprint.boost": "+5 Barn Animals",
+  "description.solAndLuna.boost": "+50% Crafting Speed",
+  "description.blossomWard.boost": "+1 Spring Crop Yield",
+  "description.solflareAegis.boost": "-50% Summer Crop Growth Time",
+  "description.autumnsEmbrace.boost": "-50% Autumn Crop Growth Time",
+  "description.frozenHeart.boost": "+1 Winter Crop Yield",
   "friendship.gift.points": "Points",
   "friendship.gift.nextReward": "Next Reward:",
   "friendship.gift.firstReward": "First Reward:",
